Minor adjustments to fix odd styles on firefox and edge.

--- a/src/styles/modules/_list.scss
+++ b/src/styles/modules/_list.scss
@@ -44,11 +44,13 @@
     -webkit-margin-start: 0;
     -webkit-margin-end: 0;
     -webkit-padding-start: 0;
+    padding-left: 0;
   }
 
   &--remove-webkit-side-space {
     /*spacing*/
     -webkit-padding-start: 0;
+    padding-left: 0;
   }
 
   &--remove-webkit-top-space {
