--- a/src/styles/modules/_post.scss
+++ b/src/styles/modules/_post.scss
@@ -221,7 +221,7 @@
 
   &__thumbnail {
     /*display*/
-    display: inline-block;
+    display: block;
     /*position*/
     position: relative;
     top: 50%;
