--- a/src/styles/modules/_site-footer.scss
+++ b/src/styles/modules/_site-footer.scss
@@ -119,7 +119,7 @@
 
   &__social-icons {
     /*display*/
-    display: inline-block;
+    display: block;
     /*position*/
     position: relative;
     /*spacing*/
